Fix contrast errors

--- a/head_mobile_portfolio.css
+++ b/head_mobile_portfolio.css
@@ -69,7 +69,8 @@ main {
 
 .header-colored {
   margin-top: 0;
-  color: #36b37e;
+  /*contrast color*/
+  color: #1a5b40;
 }
 
 .text {
@@ -176,7 +177,7 @@ main {
   font-size: 17px;
   line-height: 24px;
   padding: 12px;
-  background: #36b37f;
+  background: #1a5b40;
   border-radius: 4px;
   letter-spacing: 0.03em;
   color: #fff;
@@ -224,7 +225,7 @@ main {
   font-size: 17px;
   line-height: 24px;
   text-align: center;
-  background: #36b37f;
+  background: #1a5b40;
   border-radius: 4px;
   color: #fff;
   padding: 12px;
@@ -282,7 +283,7 @@ main {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #36b37e;
+  color: #1a5b40;
 }
 
 .about-me-frameworks {
@@ -304,7 +305,7 @@ main {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #36b37e;
+  color: #1a5b40;
 }
 
 .about-me-skills {
@@ -326,7 +327,7 @@ main {
   font-size: 12px;
   line-height: 16px;
   letter-spacing: 0.03em;
-  color: #36b37e;
+  color: #1a5b40;
 }
 
 .input-button {
@@ -337,7 +338,7 @@ main {
   font-size: 17px;
   line-height: 24px;
   text-align: center;
-  background: #36b37f;
+  background: #1a5b40;
   border-radius: 4px;
   color: #fff;
   padding: 12px;
@@ -349,7 +350,7 @@ main {
 .work-button:hover,
 .about-me-button:hover,
 .input-button:hover {
-  background: #36b37f;
+  background: #1a5b40;
   box-shadow: 0 8px 16px rgba(54, 179, 127, 0.24);
   border-radius: 4px;
   font-size: 20px;
